# StaticMemoryAnalyzer

./: .gitmodules  CMakeLists.txt  README.md
apps/Infineon_Aurix_TC38x/: memory_map.json
config/: memory_map.aurixTC38x.json.in
include/: StaticMapAnalyzer.h
src/: StaticMapAnalyzer.cpp
